Improved GetValue/EventProcessing